sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:17: error: type mismatch;
 found   : Unit
 required: Int
  for(i <- 1 to indSorted){
        ^